# outgrep

./: .gitignore  CLAUDE.md  CODE_INTELLIGENCE_PLATFORM_PLAN.md  Cargo.toml  IMPLEMENTATION_PLAN.md  build.rs  install-semantic.sh  model-registry.json  rust-code-diagnostics-research-report.md  test.rs  test2.rs  test_file.py  test_file.rs  test_file.txt
.outgrep/: config
crates/ast-config/: Cargo.toml
crates/ast-config/src/: combined.rs  fixer.rs  label.rs  lib.rs  rule_collection.rs  rule_config.rs  rule_core.rs
crates/ast-config/src/rule/: deserialize_env.rs  mod.rs  nth_child.rs  range.rs  referent_rule.rs  relational_rule.rs  stop_by.rs
crates/ast-config/src/transform/: mod.rs  rewrite.rs  trans.rs
crates/ast-core/: Cargo.toml
crates/ast-core/src/: language.rs  lib.rs  matcher.rs  meta_var.rs  node.rs  ops.rs  pinned.rs  replacer.rs  source.rs
crates/ast-core/src/match_tree/: match_node.rs  mod.rs  strictness.rs
crates/ast-core/src/matcher/: kind.rs  node_match.rs  pattern.rs  text.rs
crates/ast-core/src/replacer/: indent.rs  structural.rs  template.rs
crates/ast-core/src/tree_sitter/: mod.rs  traversal.rs
crates/ast-language/: Cargo.toml
crates/ast-language/src/: bash.rs  cpp.rs  csharp.rs  css.rs  elixir.rs  go.rs  haskell.rs  html.rs  json.rs  kotlin.rs  lib.rs  lua.rs  parsers.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  yaml.rs
crates/ast-lsp/: Cargo.toml
crates/ast-lsp/src/: lib.rs  utils.rs
crates/ast-lsp/tests/: basic.rs
crates/core/: lib.rs  main.rs  search.rs
crates/core/diagnostics/: ast_extractor.rs  compiler.rs  git.rs  metrics.rs  mod.rs  test_watcher.rs  tree.rs  types.rs  watcher.rs
crates/core/flags/: config.rs  defs.rs  hiargs.rs  hierarchy.rs  lowargs.rs  management.rs  mod.rs  parse.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: ast_context.rs  language_detection.rs  lib.rs
crates/searcher/src/semantic/: downloader.rs  embedding.rs  indexing.rs  mod.rs  registry.rs  search.rs  types.rs
docs/: Advanced Syntax-Aware Code Search_ Current State,.md  Immediate_Research_Opportunities_and_Next_Steps.md  repos-analysis-complete.json  repos-analysis-final.md  repos-analysis-summary.json  structure-draft.md  vision.md
docs/research/: Beyond Grep_ Cutting-Edge AST-Aware Search, Semant.md  Early_Intervention_Late_Interaction_Research_Analysis.md  beyond_the_ast_a_report_on_the_next_generation_of_semantic_code_search_and_analysis.md  neurosymbolic_code_search-the_fusion_of_abstract_syntax_trees_and_late_interaction_vectors.md
tests/: util.rs
