[package]
name = "outgrep-ast-lsp"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = [
  "ast",
  "pattern",
  "codemod",
  "search",
  "rewrite",
]
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = ["Tom <tom@example.com>"]

[dependencies]
outgrep-ast-core.workspace = true
outgrep-ast-config.workspace = true
serde.workspace = true
dashmap.workspace = true

serde_json = "1.0.141"
tower-lsp-server = "0.22.0"

[dev-dependencies]
outgrep-ast-language.workspace = true
tokio = { version = "1.45.0", features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
] }
