[package]
name = "grep-searcher"
version = "0.1.14"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Fast line oriented regex searching as a library.
"""
documentation = "https://docs.rs/grep-searcher"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/searcher"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/searcher"
readme = "README.md"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
bstr = { version = "1.6.2", default-features = false, features = ["std"] }
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
grep-matcher = { version = "0.1.7", path = "../matcher" }
log = "0.4.20"
memchr = "2.6.3"
memmap = { package = "memmap2", version = "0.9.0" }
thiserror = "2.0.0"
tempfile = "3.20.0"

# Semantic search
instant-distance = "0.6.1"
ort = { version = "1.16.3", features = ["download-binaries", "compile-static"] }
tokenizers = "0.19.1"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking"] }

# AST functionality
outgrep-ast-core = { path = "../ast-core" }
outgrep-ast-language = { path = "../ast-language" }

[dev-dependencies]
grep-regex = { version = "0.1.13", path = "../regex" }
regex = "1.9.5"

[features]
# These features are DEPRECATED. Runtime dispatch is used for SIMD now.
simd-accel = []
avx-accel = []
